

[tool.poetry]
name = "siesta"
version = "0.1.0"
description = "Automatize workflow with jinja2 prompts."
authors = ["Irae Hueck Costa <mail@irae.me>"]

[tool.poetry.dependencies]
python = "^3.8"
litellm = "^1.55.6"


[tool.poetry.scripts]
siesta = "siesta:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
