

[project]
name = "siesta"
version = "0.1.0"
description = "Automatize workflow with jinja2 prompts."
authors = [
    {name = "Irae Hueck Costa", email = "mail@irae.me"}
]
requires-python = ">=3.8"
dependencies = [
    "litellm>=1.55.6",
    "jinja2>=3.1.4",
]

[project.scripts]
siesta = "siesta:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
